# BevelDesk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CRITIQUE.md  DECISIONS.md  PLAN.md  PLAN_NEXT.md  README.md  STATUS.md
.claude/skills/imgui-os/: SKILL.md
.github/workflows/: build.yml  pages.yml
build-web/: CMakeCache.txt  Makefile  cmake_install.cmake  index.data  index.html  index.js  index.wasm
macos/: Info.plist
src/: main.cpp
src/app/: app.cpp  app.h  term.cpp  term.h
src/platform/: gl.h  platform.cpp  platform.h  pty.cpp  pty.h
src/shell/: about.cpp  about.h  desktop.cpp  desktop.h  displayprops.cpp  displayprops.h  dosprompt.cpp  dosprompt.h  drawer.cpp  drawer.h  explorer.cpp  explorer.h  macdemo.cpp  macdemo.h  run.cpp  run.h  shutdown.cpp  shutdown.h  taskbar.cpp  taskbar.h
src/theme95/: bevel.cpp  bevel.h  icons95.cpp  icons95.h  palette.cpp  palette.h  style.cpp  style.h  theme95.h  widgets.cpp  widgets.h  window.cpp  window.h
web/: shell.html
web/rootfs/: README.TXT
web/rootfs/DOS/: AUTOEXEC.BAT  CONFIG.SYS
web/rootfs/My Documents/: Welcome.txt
web/rootfs/Program Files/Accessories/: games.txt
